--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -2,8 +2,8 @@ server {
     listen 80;
     server_name localhost;
 
-    root /var/www/public;
-    index index.php;
+    root /var/www/html/public;
+    index index.php index.html;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
@@ -11,12 +11,14 @@ server {
 
     location ~ \.php$ {
         include fastcgi_params;
-        fastcgi_pass app:9000;
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-        fastcgi_param DOCUMENT_ROOT $realpath_root;
+        fastcgi_pass 127.0.0.1:9000;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_index index.php;
     }
 
-    location ~ /\.(?!well-known).* {
-        deny all;
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 7d;
+        access_log off;
+        add_header Cache-Control "public";
     }
 }
