--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
         "clsx": "^2.1.1",
         "concurrently": "^9.1.2",
         "date-fns": "^4.1.0",
+        "dompurify": "^3.2.6",
         "framer-motion": "^12.12.2",
         "globals": "^16.1.0",
+        "html-react-parser": "^5.2.5",
         "laravel-vite-plugin": "^1.0",
         "lucide-react": "^0.511.0",
         "react": "^19.1.0",
