--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "eslint": "^9.27.0",
         "eslint-config-prettier": "^10.1.5",
         "eslint-plugin-react": "^7.37.5",
-        "eslint-plugin-react-hooks": "^5.2.0",
+        "eslint-plugin-react-hooks": "^7.0.1",
         "prettier": "^3.5.3",
         "prettier-plugin-organize-imports": "^4.1.0",
         "prettier-plugin-tailwindcss": "^0.6.11",
@@ -38,11 +38,11 @@
         "@radix-ui/react-toggle": "^1.1.9",
         "@radix-ui/react-toggle-group": "^1.1.10",
         "@radix-ui/react-tooltip": "^1.2.7",
-        "@tailwindcss/vite": "^4.1.7",
+        "@tailwindcss/vite": "^4.1.16",
         "@types/react": "^19.1.5",
         "@types/react-dom": "^19.1.5",
         "@types/react-slick": "^0.23.13",
-        "@vitejs/plugin-react": "^4.4.1",
+        "@vitejs/plugin-react": "^5.1.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.1.2",
@@ -51,7 +51,7 @@
         "framer-motion": "^12.12.2",
         "globals": "^16.1.0",
         "html-react-parser": "^5.2.5",
-        "laravel-vite-plugin": "^1.0",
+        "laravel-vite-plugin": "^2.0.1",
         "lucide-react": "^0.511.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
@@ -61,7 +61,8 @@
         "tailwindcss": "^4.1.7",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.8.3",
-        "vite": "^6.0"
+        "@tanstack/react-query": "^5.90.5",
+        "vite": "7.1.11"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "4.9.5",
