--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME="Steam Library"
+APP_ENV=production
 APP_KEY=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://localhost
 
 APP_LOCALE=en
@@ -18,20 +18,22 @@ BCRYPT_ROUNDS=12
 LOG_CHANNEL=stack
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
-LOG_LEVEL=debug
+LOG_LEVEL=error
 
 DB_CONNECTION=pgsql
-# DB_HOST=db
-# DB_PORT=5432
-# DB_DATABASE=laravel
-# DB_USERNAME=laravel
-# DB_PASSWORD=secret
+DB_HOST=db
+DB_PORT=5432
+DB_DATABASE=laravel
+DB_USERNAME=laravel
+DB_PASSWORD=secret
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
-SESSION_DOMAIN=null
+SESSION_DOMAIN=domain
+
+SANCTUM_STATEFUL_DOMAINS=domain
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
@@ -64,4 +66,4 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
-STEAM_API_KEY=KEY
+STEAM_API_KEY=
