--- a/docker/prod/supervisord.conf
+++ b/docker/prod/supervisord.conf
@@ -6,3 +6,11 @@ command=/usr/local/sbin/php-fpm
 
 [program:nginx]
 command=/usr/sbin/nginx -g "daemon off;"
+
+[program:laravel-queue]
+command=php /var/www/html/artisan queue:work --sleep=3 --tries=3 --timeout=90
+autostart=true
+autorestart=true
+stdout_logfile=/var/log/laravel-queue.log
+stderr_logfile=/var/log/laravel-queue-error.log
+user=www-data
