--- a/docker/prod/supervisord.conf
+++ b/docker/prod/supervisord.conf
@@ -8,7 +8,7 @@ command=/usr/local/sbin/php-fpm
 command=/usr/sbin/nginx -g "daemon off;"
 
 [program:laravel-queue]
-command=php /var/www/html/artisan queue:work --sleep=3 --tries=3 --timeout=90
+command=php /var/www/artisan queue:work --sleep=3 --tries=3 --timeout=90
 autostart=true
 autorestart=true
 stdout_logfile=/var/log/laravel-queue.log
